+ Added WeCSS support for '!' character in selectors -- this is a new one from the CSS4 drafts, marking the subject (desired target) of the selector, our developer dreams come true (believe me.) (Class-CSS.php) * Managed to harmonize the arrow size across all my test browsers (let's be clear: Opera, Firefox and some IE just to be sure), without increaing the filesize too much. (common.css, index.css) ! Magically found a workaround for menu text overlapping the arrows in IE9... Just needed to add overflow:hidden to the container. And it doesn't seem to break anything else. A little prayer maybe..? I'm sure that'll help. (index.css) ! Fixed plenty of problems with various IE versions in the Wuthering skin. Yeah, not my favorite skin, and not my favorite browser -- no wonder I didn't test that case thoroughly... (Wuthering/extra.css, Wuthering/extra.ie[-9].css)

--- a/Themes/default/skins/Wine/Wuthering/extra.css
+++ b/Themes/default/skins/Wine/Wuthering/extra.css
@@ -11,12 +11,10 @@ body
 	padding: 0
 
 .lightgrad virtual
-	background-image: none
-	// gradient: #eee, #faf8f6
+	gradient: #eee, #faf8f6
 
 .darkgrad virtual
-	background-image: none
-	// gradient: #bcbcbb, #f3f2f0
+	gradient: #bcbcbb, #f3f2f0
 
 .wehead, .catbase
 	background-image: none
@@ -191,8 +189,7 @@ a, #linktree a
 	padding: 4px 8px
 	margin-top: 8px
 	overflow: auto
-	box-shadow: none
-	text-shadow: none
+	box-shadow, text-shadow: none
 	font: italic 1.2em/20px $main_font
 
 .cat final
